force-app/main/default/objects/Project_Logs__c/Project_Logs__c.object-meta.xml
<CustomObject>
    <label>10K Project Logs</label>
    <nameField>
        <label>Project Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>10K Project Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>