force-app/main/default/objects/Project_Logs__c/fields/Expert__c.field-meta.xml
<CustomField>
    <fullName>Expert__c</fullName>
    <label>Expert</label>
    <length>200</length>
    <type>Text</type>
</CustomField>