force-app/main/default/objects/Project_Logs__c/fields/Project_Member_id__c.field-meta.xml
<CustomField>
    <fullName>Project_Member_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Member id</label>
    <referenceTo>Project_Member__c</referenceTo>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>