force-app/main/default/objects/Project_Logs__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>