force-app/main/default/objects/Project_Logs__c/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <label>Story</label>
    <length>200</length>
    <type>Text</type>
</CustomField>