force-app/main/default/objects/Project_Logs__c/fields/Story_Name__c.field-meta.xml
<CustomField>
    <fullName>Story_Name__c</fullName>
    <label>Story Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>