force-app/main/default/objects/Project_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Project__c</columns>
    <columns>Story__c</columns>
    <columns>Story_Name__c</columns>
    <columns>Hours__c</columns>
    <columns>Expert__c</columns>
    <columns>Project_Member_id__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>